# sigaex/src/main/java/br/gov/jfrj/siga/ex/api/v1/IExApiV1.java
@@ -446,6 +446,18 @@ public interface IExApiV1 {
         public void run(Request req, Response resp, ExApiV1Context ctx) throws Exception;
     }
 
+    public interface IModelosIdPreenchimentosGet extends ISwaggerMethod {
+        public static class Request implements ISwaggerRequest {
+            public String id;
+        }
+
+        public static class Response implements ISwaggerResponse {
+            public List<PreenchimentoItem> list = new ArrayList<>();
+        }
+
+        public void run(Request req, Response resp, ExApiV1Context ctx) throws Exception;
+    }
+
     public interface IModelosIdLotacoesIdLotacaoPreenchimentosGet extends ISwaggerMethod {
         public static class Request implements ISwaggerRequest {
             public String id;
